<resources>
    <string name="app_name">Lab2Activities</string>
    <string name="cedula">cedula</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="contrasena">contraseña</string>
    <string name="correo_electronico">correo electronico</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="edad">edad</string>
    <string name="anadir_usuario">Añadir usuario</string>
    <string name="anadir_lugar" >Añadir lugar</string>
    <string name="score">puntaje</string>
    <string name="descripcion">descripcion</string>
    <string name="temperatura">temperatura</string>
    <string name="ubicacion">ubicacion</string>
    <string name="nombre">nombre</string>
    <string name="foto_del_lugar">foto del lugar</string>
    <string name="foto_de_perfil_del_usuario">foto de perfil del usuario</string>
    <string name="Usuario">Usuario</string>
    <string name="Clave">Clave de Usuario</string>
    <string name="LogBtn">Iniciar Sesión</string>
    <string name="NuevaCuenta">No tienes cuenta aún?</string>
    <string name="title_activity_nav_drawer">Lab2Activities</string>
    <string name="txtsesionCerrada">Se ha cerrado\nla Sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lugares">Sitios de Interes</string>
    <string name="mensajeSitios">A donde quieres ir?</string>
    <string name="acercaDeNav">Acerca de...</string>
    <string name="perfilNav">Perfil</string>
    <string name="lugaresNav">Lugares</string>
    <string name="infoAcercaDe">INGENIERIA DE SISTEMAS\n\nCOMPUTACIÓN MOVIL\n\nJaime Jiménez Serrano\nBrayan Barrientos Pabuena\nGrupo : 06\n\n2016</string>

    <string name="hello_blank_fragment">Roberto de Jesus Agudelo Restrepo</string>
    <string name="icono_de_loggin">icono de loggin</string>
    <string name="crear_cuenta">Crear cuenta ?</string>
    <string name="nav_cuenta">Opciones</string>
    <string name="nav_sesion">Cerrar Sesión</string>
    <string name="mensaje_cerrar_sesion">Seguro que desea\ncerrar sesión?</string>
    <string name="opcion_positiva">SI</string>
    <string name="opcion_negativa">NO</string>
    <string name="login_incorrecto">Usuario o contraseña incorrectos</string>

    <string name="cedula">Cedula</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="nombre_de_usuario">nombre de Usuario</string>
    <string name="contrasena">contrasena</string>
    <string name="edad">Edad</string>
    <string name="anadir_usuario">Anadir Usuario</string>
    <string name="anadir_lugar">Anadir Lugar</string>
    <string name="score">Puntaje</string>
    <string name="descripcion">Descripcion</string>
    <string name="temperatura">Temperatura</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="nombre">Nombre</string>
    <string name="foto_del_lugar">Foto del lugar</string>
    <string name="foto_de_perfil_del_usuario">Foto de perfil del usuario</string>
    <string name="correo_electronico">Correo Electronico</string>

</resources>
