<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/userPicture"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/foto_de_perfil_del_usuario" />
            <Button
                android:id="@+id/addPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userPicture"
                android:layout_centerHorizontal="true"
                android:text="@string/tomar_foto"
                android:onClick="addPhoto"/>
            <EditText
                android:id="@+id/userID"
                android:layout_below="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cedula"
                android:inputType="number" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userID"
                android:hint="@string/nombre_de_usuario"
                android:inputType="text" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/userAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userPassword"
                android:inputType="number"
                android:hint="@string/edad"></EditText>

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userAge"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress" />


            <Button
                android:id="@+id/userAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userEmail"
                android:layout_centerHorizontal="true"
                android:onClick="addUser"
                android:text="@string/anadir_usuario" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
