<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr06.lab2activities.AddPlace">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/placePicture"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/foto_del_lugar" />
            <Button
                android:id="@+id/addPlacePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placePicture"
                android:layout_centerHorizontal="true"
                android:text="@string/tomar_foto"
                android:onClick="addPhotoPlace"/>
            <EditText
                android:id="@+id/placeName"
                android:layout_below="@+id/addPlacePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/placeLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeName"
                android:hint="@string/ubicacion"
                android:inputType="text" />

            <EditText
                android:id="@+id/placeScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeLocation"
                android:hint="@string/score"
                android:inputType="number" />

            <EditText
                android:id="@+id/placeTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeScore"
                android:inputType="text"
                android:hint="@string/temperatura"></EditText>

            <EditText
                android:id="@+id/placeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeTemperature"
                android:hint="@string/descripcion"
                android:inputType="text" />


            <Button
                android:id="@+id/placeAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeDescription"
                android:layout_centerHorizontal="true"
                android:onClick="addPlace"
                android:text="@string/anadir_lugar" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
